--- a/.github/workflows/push_tag_publish.yml
+++ b/.github/workflows/push_tag_publish.yml
@@ -60,21 +60,6 @@ jobs:
       - name: cargo test with all features
         run: cargo test --all-features
 
-  verify:
-    name: Model checking
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
-        with:
-          persist-credentials: false
-
-      - name: Run Kani Verifier
-        uses: model-checking/kani-github-action@v1
-        with:
-          args: --tests --all-features
-
   deny:
     name: Lint dependency crates
     runs-on: ubuntu-latest
@@ -90,7 +75,7 @@ jobs:
 
   publish:
     name: Upload release to crates.io
-    needs: [test, verify, deny]  # do not publish if something fails
+    needs: [test, deny]  # do not publish if something fails
     runs-on: ubuntu-latest
     timeout-minutes: 3
     steps:
